    - Use Clearlooks for Openbox theme.
    - Use black font color for the panel.
  * autostart : Add nm-applet to the sessions.
  * Use system-shutdown-panel icon for shutdown command and clean Encoding keys
  * Use Chromium instead of Firefox inthe  panel and openbox configuration.
  * Remove cpu and netstat plugin, and move volume applet before the tray.

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 14 Feb 2010 11:44:16 +0100

lubuntu-default-settings (0.4) lucid; urgency=low

  * Remove spacer before the menu applet on the panel.
  * Use openbox menu on the desktop indead of pcmanfm one.
  * Install configuration file for QT apps if no one is installed, and set
    QT style=GTK+.
  * Merge Leszek Lesner openbox settings. 

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 24 Jan 2010 19:57:14 +0100

lubuntu-default-settings (0.3) lucid; urgency=low

  * Pass -e LXDE to lxsession to behave like a LXDE session.
    Bump depends on lxsession to >= 0.4.1 to use this feature.
  * Remove autostart for lxde-settings-daemon, it merged with lxsession.
  * Change path to the wallpaper to a png file rather than a jpg. Bump depends
    on lubuntu-artwork (>= 0.3) 

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 13 Dec 2009 11:19:35 +0100

lubuntu-default-settings (0.2) lucid; urgency=low

  * Add the volume applet to the panel to have a way to configure 
    the sound
  * Autostart gnome-power-manager to add power management support and 
    the battery icon in notification-area
  * Set the terminal for pcmanfm to lxterminal
  * Move lxpanel background for Lubuntu to a specific file.
  * Use /etc/xdg/lubuntu to store custom configuration files.
  * Remove config file for lxsession, all is in desktop.conf
  * Depends on lubuntu-artwork (>= 0.2) to bring the new lxpanel background.

 -- Julien Lavergne <gilir@ubuntu.com>  Sat, 28 Nov 2009 00:21:07 +0100

lubuntu-default-settings (0.1) lucid; urgency=low

  * Initial upload (LP: #475649)
