@@ -315,6 +315,19 @@
         <command>pcmanfm</command>
       </action>
     </keybind>
+
+   <!-- Keybinding for PrintScreen Key -->
+    <keybind key="Print">
+      <action name="Execute">
+       <execute>scrot</execute>
+      </action>
+    </keybind>
+
+    <keybind key="A-Print">
+      <action name="Execute">
+       <execute>scrot -s</execute>
+      </action>
+    </keybind>  
     
    <!-- Keybindings for Multimedia Keys and LCD Backlight (alternative when not using gnome-power-manager or xfce4-volumed)
    <keybind key="XF86AudioMute">
