@@ -14,6 +14,8 @@ lubuntu-default-settings (0.5) UNRELEASED; urgency=low
   * Use system-shutdown-panel icon for shutdown command and clean Encoding keys
   * Use Chromium instead of Firefox inthe  panel and openbox configuration.
   * Remove cpu and netstat plugin, and move volume applet before the tray.
+  * Complete openbox keybindings for taking screenshot. Thanks Adam for the
+    patch.
 
  -- Julien Lavergne <gilir@ubuntu.com>  Sun, 14 Feb 2010 11:44:16 +0100
 
